2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0+beta3.

2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0+beta2 release.

	* CHANGES: Updated.

2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Remove libhiredis from the list of prerequisites since it
	is actually required by openvas-libraries and handled there.

2014-09-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Replace last old internal calls for memory management by respective
	glib functions.

	* src/ntp.c (ntp_long_attack): Replaced emalloc() by g_malloc0() and efree()
	by g_free().
	(ntp_read_prefs): Replaced emalloc() by g_malloc0(), efree() by g_free()
	and estrdup() by g_strdup().
	(ntp_recv_file): Replaced estrdup() by g_strdup().

	* src/openvassd.c (main_loop): Replaced emalloc() by g_malloc0().

	* src/attack.c (attack_init_hostinfos_vhosts, attack_init_hostinfos):
	Replaced emalloc() by g_malloc0() and estrdup() by g_strdup().
	(attack_start): Replaced estrdup() by g_strdup().
	(attack_network): Replaced free() by g_free().

2014-09-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Replace more old internal calls for memory management by respective
	glib functions.

	* src/pluginlaunch.c (process_internal_msg): Replace efree() by
	g_free() and set buffer to NULL. 

	* src/comm.c (send_plug_info): Replaced estrdup() by g_strdup(),
	emalloc() by g_malloc0() and efree by g_free().
	(comm_setup_plugins): Replaced emalloc() by g_malloc0() and efree()
	by g_free().

	* src/utils.c (list2arglist): Avoid calling efree(). Replace
	emalloc() by g_malloc0().

2014-09-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Replace old internal calls for memory management by respective
	glib functions.

	* src/pluginload.c (plugins_init): Replace emalloc() by g_malloc0().

	* src/hosts.c (forward): Replace efree() by g_free() and take care